--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -3,12 +3,18 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[723, 350]"/>
+    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosed" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosed"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -84,7 +90,7 @@
                           <Component id="jPanel11" pref="138" max="32767" attributes="0"/>
                           <Component id="jPanel7" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="127" max="32767" attributes="0"/>
+                      <EmptySpace pref="130" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -166,6 +172,7 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="pswdBD">
                   <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pswdBDActionPerformed"/>
                     <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="pswdBDKeyPressed"/>
                   </Events>
                   <AuxValues>
@@ -201,7 +208,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" pref="411" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" pref="414" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -227,19 +234,17 @@
                     <Component class="javax.swing.JTable" name="tabUltIni">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="8" rowCount="3">
+                          <Table columnCount="6" rowCount="3">
                             <Column editable="false" title="CDD" type="java.lang.String"/>
                             <Column editable="false" title="Tombo" type="java.lang.String"/>
                             <Column editable="false" title="Tombo Anterior 1" type="java.lang.String"/>
                             <Column editable="false" title="Tombo Anterior 2" type="java.lang.String"/>
                             <Column editable="false" title="Tombo Posterior 1" type="java.lang.String"/>
                             <Column editable="false" title="Tombo Posterior 2" type="java.lang.String"/>
-                            <Column editable="false" title="Verificar" type="java.lang.Object"/>
-                            <Column editable="false" title="Observa&#xe7;&#xf5;es" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="autoResizeMode" type="int" value="0"/>
-                        <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" preCode="//Font font = getGraphics().getFont();&#xa;&#xa;//FontMetrics fmetrics = tabUltIni.getFontMetrics();&#xa;&#xa;for (int i = 0; i &lt; tabUltIni.getColumnCount(); i++){&#xa;    &#xa;    //Font font = getGraphics().getFont();&#xa;    Font font = tabUltIni.getFont();&#xa;    FontMetrics fmetrics = this.getFontMetrics(font);&#xa;    &#xa;    int comprString = fmetrics.stringWidth(tabUltIni.getColumnName(i));&#xa;    //int comprString = font.stringW(tabUltIni.getColumnName(i));&#xa;    //tabUltIni.getColumnModel().getColumn(i).setPreferredWidth(comprString);&#xa;    tabUltIni.getColumnModel().getColumn(i).setMinWidth(comprString + 10);&#xa;    &#xa;}">
+                        <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="for (int i = 0; i &lt; tabUltIni.getColumnCount(); i++){&#xa;   &#xa;    Font font = tabUltIni.getFont();&#xa;    FontMetrics fmetrics = this.getFontMetrics(font);&#xa;    &#xa;    int comprString = fmetrics.stringWidth(tabUltIni.getColumnName(i));&#xa;    tabUltIni.getColumnModel().getColumn(i).setMinWidth(comprString + 10);&#xa;    &#xa;}">
                           <TableColumnModel selectionModel="0">
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
@@ -257,6 +262,9 @@
                           <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
                         </Property>
                       </Properties>
+                      <AuxValues>
+                        <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="InventarioUI_tabUltIni"/>
+                      </AuxValues>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -364,7 +372,7 @@
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="botCargAcervo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="68" max="32767" attributes="0"/>
+                          <EmptySpace pref="72" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -628,7 +636,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="painelCargArqSIABI" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="458" max="32767" attributes="0"/>
+                      <EmptySpace pref="461" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -708,7 +716,7 @@
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="botCargSIABI" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="68" max="32767" attributes="0"/>
+                          <EmptySpace pref="72" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -787,7 +795,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="216" max="32767" attributes="0"/>
+                      <EmptySpace pref="220" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -840,17 +848,19 @@
                 <Component class="javax.swing.JComboBox" name="comboRelat">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="6">
+                      <StringArray count="5">
                         <StringItem index="0" value="Itens localizados no acervo"/>
                         <StringItem index="1" value="Itens n&#xe3;o localizados no acervo"/>
                         <StringItem index="2" value="Itens n&#xe3;o cadastrados no SIABI"/>
                         <StringItem index="3" value="Itens localizados no acervo tidos como emprestados"/>
                         <StringItem index="4" value="Itens para verifica&#xe7;&#xe3;o"/>
-                        <StringItem index="5" value=" "/>
                       </StringArray>
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Selecione o relat&#xf3;rio a ser gerado"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboRelatActionPerformed"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
@@ -872,15 +882,33 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="293" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="328" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="187" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JButton" name="jButton1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Fechar"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+              </Events>
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
